fix overflow bug

--- a/app/assets/stylesheets/albums.scss
+++ b/app/assets/stylesheets/albums.scss
@@ -42,6 +42,7 @@
 .album-show-container {
 	padding-left: 40px;
 	padding-right: 40px;
+	height: 100%;
 }
 
 .album-show-title {
