--- a/app/assets/stylesheets/pictures.scss
+++ b/app/assets/stylesheets/pictures.scss
@@ -1,6 +1,6 @@
 .img-thumb {
 	display: inline-block;
-	padding: 10px;
+	padding: 5px;
 }
 
 .pictures-collection {
